@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Text_Display.cxx,v 1.12.2.22 2002/07/30 15:10:32 easysw Exp $"
+// "$Id: Fl_Text_Display.cxx,v 1.12.2.23 2002/07/30 18:40:50 easysw Exp $"
 //
 // Copyright 2001-2002 by Bill Spitzak and others.
 // Original code Copyright Mark Edel.  Permission to distribute under
@@ -1892,11 +1892,11 @@ int Fl_Text_Display::handle(int event) {
 
   switch (event) {
     case FL_ENTER:
-      fl_cursor(FL_CURSOR_INSERT);
+      if (active_r()) fl_cursor(FL_CURSOR_INSERT);
       return 1;
 
     case FL_LEAVE:
-      fl_cursor(FL_CURSOR_DEFAULT);
+      if (active_r()) fl_cursor(FL_CURSOR_DEFAULT);
       return 1;
 
     case FL_PUSH: {
@@ -1962,5 +1962,5 @@ int Fl_Text_Display::handle(int event) {
 
 
 //
-// End of "$Id: Fl_Text_Display.cxx,v 1.12.2.22 2002/07/30 15:10:32 easysw Exp $".
+// End of "$Id: Fl_Text_Display.cxx,v 1.12.2.23 2002/07/30 18:40:50 easysw Exp $".
 //
