@@ -1,6 +1,8 @@
 CHANGES IN FLTK 1.1.0
 
 	- Documentation updates.
+	- Fl_Group would send FL_ENTER events before FL_LEAVE
+	  events, causing problems with adjacent widgets.
 	- Fixed filename problems with Fl_File_Chooser -
 	  changing the filename field directly or choosing files
 	  from the root directory could yield interesting
